# curso_pdi

./: CMakeLists.txt  README.md  package.xml
msg/: PoseAruco.msg  VectorAruco.msg  aruco.msg
scripts/: ost.yaml  yaml_to_camera_info_publisher.py
scripts/calibrationdata/: ost.txt
src/: Algoritmo_Triangulacion_Geometrica.cpp  Algoritmo_Triangulacion_Geometrica_2.cpp  Algoritmo_Triangulacion_Geometrica_c.cpp  control.cpp  cv02_marca_agua.cpp  cv03_mix_image.cpp  cv04_histograma.cpp  cv05_filtro.cpp  cv06_brillo_contraste.cpp  cv07_filter.cpp  cv08_umbralizacion.cpp  cv09_k-means.cpp  cv10_region_growing.cpp  cv11_ope_morfologicas.cpp  cv12_Sobel_Canny.cpp  cv13_hough_transform.cpp  cv14_1_procesamiento_de_video.cpp  cv14_hough_transform_circles.cpp  cv15_Reconocimiento_de_frutas.cpp  cv16_detector_esquinas.cpp  cv17_flujo_optico.cpp  cv_RGB_GRAY.cpp  cv_operaciones.cpp  cv_template_file.cpp  cv_template_video.cpp  fractal_tracker.cpp  image_blur.cpp  image_publisher_cam_calib.cpp  landmarks_publisher.cpp  trayectorias.cpp  video_slidebar.cpp
